Update date validation

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       database-url="https://meetup-event-planner-4d9bb.firebaseio.com">
     </firebase-app>
     <meetup-app></meetup-app>
-    <!-- <script>
+    <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/service-worker.js');
       }
-    </script> -->
+    </script>
     <script src="bower_components/moment/moment.js"></script>
   </body>
 </html>
