feat: add default background-color for app shell

--- a/src/meetup-app.html
+++ b/src/meetup-app.html
@@ -49,6 +49,8 @@ This is foundation of the app. Other views are lazily loaded, save for the defau
         --paper-input-container-invalid-color: var(--primary-color);
         visibility: hidden;
 
+        background-color: var(--light-gray);
+
         --paper-button: {
           background-color: var(--secondary-color);
           color: #fff;
